# ChangeLog for x11-terms/aterm
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/aterm/ChangeLog,v 1.64 2005/04/07 17:18:30 blubb Exp $

  07 Apr 2005; Simon Stelling <blubb@gentoo.org> aterm-0.4.2-r11.ebuild:
  stable on amd64

  07 Apr 2005; Michał Januszewski <spock@gentoo.org>
  aterm-1.00_beta2.ebuild:
  Fixed the dependency on afterstep. Aterm-1.00 will not work properly with
  afterstep < 2.00.

  14 Feb 2005; Michał Januszewski <spock@gentoo.org>
  aterm-0.4.2-r11.ebuild, aterm-0.4.2-r12.ebuild, aterm-0.4.2-r7.ebuild,
  aterm-0.4.2-r9.ebuild:
  Removed references to 'macos'.

  13 Feb 2005; Bryan Østergaard <kloeri@gentoo.org> aterm-0.4.2-r11.ebuild:
  Stable on alpha.

  07 Feb 2005; Sven Wegener <swegener@gentoo.org> aterm-0.4.2-r11.ebuild,
  aterm-0.4.2-r12.ebuild, aterm-0.4.2-r7.ebuild, aterm-0.4.2-r9.ebuild:
  Added missing digest entries.

*aterm-0.4.2-r12 (06 Feb 2005)

  06 Feb 2005; Michał Januszewski <spock@gentoo.org>
  +files/aterm-0.4.2-scroll-double-free.patch, +aterm-0.4.2-r12.ebuild,
  aterm-1.00_beta2.ebuild:
  Added a fix for bug #75604. aterm-0.4.2-r12 is the first 0.4.2 ebuild that
  uses the xgetdefault USE flag. If you have some problems with how your
  ~/.Xdefaults is handled, try enabling/disabling this flag.

*aterm-1.00_beta2 (06 Feb 2005)

  06 Feb 2005; Michał Januszewski <spock@gentoo.org>
  +aterm-1.00_beta2.ebuild:
  Version bump (closes #77615). All arches other than x86 got dropped due to
  changes in the code and the new dependency on AfterStep. Most of the patches
  we have been using so far either got integrated upstream or dropped. Those
  that got dropped will most likely not be put back - if anyone wants some new
  features, contact the upstream devs, and don't open bugs about them on the
  Gentoo Bugzilla. Please note the lack of a -ja patch. No such patch has been