@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/root-tail/Attic/root-tail-1.2-r2.ebuild,v 1.5 2005/04/06 16:24:37 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/root-tail/Attic/root-tail-1.2-r2.ebuild,v 1.6 2005/04/09 13:43:35 corsair Exp $
 
 inherit eutils flag-o-matic
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.goof.com/pcg/marc/data/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="x86 ~sparc amd64 ppc ~ppc64"
+KEYWORDS="x86 ~sparc amd64 ppc ppc64"
 IUSE="kde debug"
 
 RDEPEND="virtual/x11"
