@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/root-tail
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/root-tail/ChangeLog,v 1.31 2005/04/06 16:24:37 cryos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/root-tail/ChangeLog,v 1.32 2005/04/09 13:43:35 corsair Exp $
+
+  09 Apr 2005; Markus Rothe <corsair@gentoo.org> root-tail-1.2-r2.ebuild:
+  Stable on ppc64
 
   06 Apr 2005; Marcus D. Hanwell <cryos@gentoo.org> root-tail-1.2-r2.ebuild:
   Marked stable on amd64.
