@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.68 2005/04/01 19:27:18 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.69 2005/04/09 13:47:32 corsair Exp $
+
+  09 Apr 2005; Markus Rothe <corsair@gentoo.org> xterm-200.ebuild:
+  Stable on ppc64
 
   01 Apr 2005; Aron Griffis <agriffis@gentoo.org> xterm-199.ebuild:
   stable on ia64
