@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/aterm
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/aterm/ChangeLog,v 1.64 2005/04/07 17:18:30 blubb Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/aterm/ChangeLog,v 1.65 2005/04/09 13:42:14 corsair Exp $
+
+  09 Apr 2005; Markus Rothe <corsair@gentoo.org> aterm-0.4.2-r11.ebuild:
+  Stable on ppc64
 
   07 Apr 2005; Simon Stelling <blubb@gentoo.org> aterm-0.4.2-r11.ebuild:
   stable on amd64
